Change hover element to HTML element when over root scrollbar

We previously set hover element to document when over root scrollbar.
In this patch we change it to HTML element.

BUG=729140

Review-Url: https://codereview.chromium.org/2922193002
Cr-Commit-Position: refs/heads/master@{#477728}

Former-commit-id: 13ecf25f878437df5e233a1f9e567aff56324aec